Fixed the link to change colors when dark mode is active

--- a/fancy.css
+++ b/fancy.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
 .topnav {
   overflow: hidden;
   background-color: #333;
@@ -75,5 +74,8 @@ body {
 
 .dark-mode {
   background-color: black;
+  color: white;
+}
+.dark-mode a[href="/memoir.html"] {
   color: white;
 }
